@@ -1,5 +1,11 @@
 2007-02-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
+	* src/hildon-program.c:
+	* src/hildon-window.c: Trap the X error instead of aborting. A patch
+	by Johan Bilien, fixes MB#900.
+
+2007-02-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
 	* src/hildon-number-editor.c:
 	* src/hildon-number-editor.h: Prefixing the number editor enums with
 	HILDON_NUMBER_EDITOR_ERROR_. Not sure why I haven't really noticed
